--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ trendtailor/trendApp/pyvenv.cfg
 trendtailor/trendApp/UserPreferenceApp/__pycache__/*
 trendtailor/trendApp/UserPreferenceApp/migrations/*
 trendtailor/trendApp/trendApp/__pycache__/*
+/trendtailor/trendApp/.env
