Fixed accounts app

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ trendtailor/trendApp/.env
 trendtailor/trendApp/accountsApp/__pycache__/*
 trendtailor/trendApp/trendApp/__pycache__/*
 /trendtailor/trendApp/.env
+trendtailor/trendApp/accountsApp/__pycache__/*
+trendtailor/trendApp/trendApp/__pycache__/*
