--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ trendtailor/trendApp/trendApp/__pycache__/*
 /trendtailor/trendApp/.env
 trendtailor/trendApp/accountsApp/__pycache__/*
 trendtailor/trendApp/trendApp/__pycache__/*
+myenv/*
