--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ trendtailor/trendApp/trendApp/__pycache__/*
 myenv/*
 trendtailor/venv/
 trendtailor/trendApp/staticfiles
+trendtailor\trendApp\db.sqlite3
