--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,10 @@ trendtailor/trendApp/trendApp/migrations/*
 myenv/*
 trendtailor/venv/*
 trendtailor/trendApp/db.sqlite3
+
+trendtailor/trendApp/db.sqlite3
+__pycache__/
+*.pyc
+*.pyo
+
 trendtailor\trendApp\db.sqlite3
